[package]
name = "mp"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Barbieri <matheussouzabarbieri@gmail.com>"]
description = "CLI for covert multiple markup formats easily"
license = "MIT OR APACHE-2.0"
categories = ["cli"]
readme = "README.md"
repository = "https://github.com/MSBarbieri/mp"
documentation = "https://docs.rs/mp"

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0"
